--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="konten">
 		<div class="kol-12">
 			<div class="box tengah">
-				<img width="400" alt="produk" src="C:\Users\MSI Gaming\Downloads\CODING.jpeg"/>
+				<img width="400" alt="produk" src="https://i.ibb.co/RSbK9FG/Yukinoshita-Yukino-20.jpg"/>
 			</div>
 		</div>
 		<div class="kol-12">
