--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>	
 </head>
-<!-- AWAL HEADER -->
+<!-- AWAL HEADER slmt jpg -->
 <div class="fitur oke latar-hijautua">
  	 <div class="konten tengah">
          <br/>
@@ -46,7 +46,7 @@
 		</div>
 		<div class="kol-12">
 			<div class="box tengah">
-				<img width="400"  alt="pusing" src="C:\Users\MSI Gaming\Downloads\cc.jpg"/>
+				<img width="400"  alt="pusing" src="https://ibb.co.com/rvrThx0"/>
 			</div>
 		</div>
 	</div>
@@ -67,7 +67,7 @@
 		<div class="kol-13">
 			<div class="box">
 				<div class="box tengah  latar-putih melengkung2">
-					<img width="200"  class="box" alt="menulis" src="C:\Users\MSI Gaming\Downloads\lerak.jpeg"/>
+					<img width="200"  class="box" alt="menulis" src="https://ibb.co.com/LY4mcCz"/>
 					<p class="kecil">Lerak mengandung saponin, senyawa alami yang dapat menghasilkan busa dan berfungsi sebagai deterjen alami. Ini efektif untuk membersihkan kotoran dan noda pada pakaian. </p>
 				</div>
 			</div>
@@ -75,7 +75,7 @@
 		<div class="kol-13">
 			<div class="box">
 				<div class="box tengah latar-putih melengkung2">
-					<img width="200"  class="box" alt="menulis" src="C:\Users\MSI Gaming\Downloads\jeruk.jpeg"/>
+					<img width="200"  class="box" alt="menulis" src="https://ibb.co.com/njmtD2Q"/>
 					<p class="kecil">Asam sitrat yang terkandung dalam jeruk kalamansi efektif untuk menghilangkan noda pada pakaian, seperti noda minyak atau keringat. </p>
 				</div>
 			</div>
@@ -98,7 +98,7 @@
 		</div>
          <div class="kol-12">
         	<div class="box tengah">
-				<img width="350"  alt="ingin" src="C:\Users\MSI Gaming\Downloads\download (1).jpg"/>
+				<img width="350"  alt="ingin" src="https://ibb.co.com/mbp9N5Y"/>
           	</div>
 		</div>
 	</div>
@@ -114,7 +114,7 @@
 		<div class="konten lebar75">
 			<span class="bg-hijau box melengkung5 hijautua"><b>MEMPERKENALKAN</b></span>
 			<h2 class="tebal putih">SALERAKSI</h2>
-			<img class="box" width="500" alt="produk" src="C:\Users\MSI Gaming\Downloads\pp.jpg"/>
+			<img class="box" width="500" alt="produk" src="https://ibb.co.com/0KFtqLC"/>
 			<p >Saleraksi, sabun berbahan dasar lerak dan jeruk kalamansi. Saleraksi adalah solusi cerdas untuk mencuci pakaian.</p>
 		</div>
 	</div>
