--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		</div>
          <div class="kol-12">
         	<div class="box tengah">
-				<img width="350"  alt="ingin" src="https://ibb.co.com/mbp9N5Y"/>
+				<img width="350"  alt="ingin" src="https://i.ibb.co.com/2WJvZ3L/download-1.jpg"/>
           	</div>
 		</div>
 	</div>
