--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="konten">
 		<div class="kol-12">
 			<div class="box tengah">
-				<img width="400" alt="produk" src="https://ibb.co.com/nMRgxqN"/>
+				<img width="400" alt="produk" src="https://i.ibb.co.com/N27Vcgd/CODING.jpg"/>
 			</div>
 		</div>
 		<div class="kol-12">
