--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <!-- AWAL MASALAH -->
 <div class="fitur oke">
  	<div class="konten tengah">
+		<br/>
 		<span class="bg-hijau box melengkung5 hijautua"><b>SAYA MAU TANYA</b></span>
 		<h2 class="tebal hitam">Apakah anda mengalami masalah dibawah ini?</h2>
     </div>
@@ -46,7 +47,7 @@
 		</div>
 		<div class="kol-12">
 			<div class="box tengah">
-				<img width="400"  alt="pusing" src="https://ibb.co.com/rvrThx0"/>
+				<img width="400"  alt="pusing" src="https://i.ibb.co.com/CHNnP2w/ibu-khawatir.jpg"/>
 			</div>
 		</div>
 	</div>
@@ -67,7 +68,7 @@
 		<div class="kol-13">
 			<div class="box">
 				<div class="box tengah  latar-putih melengkung2">
-					<img width="200"  class="box" alt="menulis" src="https://ibb.co.com/LY4mcCz"/>
+					<img width="200"  class="box" alt="menulis" src="https://i.ibb.co.com/JmXVGzR/lerak.jpg"/>
 					<p class="kecil">Lerak mengandung saponin, senyawa alami yang dapat menghasilkan busa dan berfungsi sebagai deterjen alami. Ini efektif untuk membersihkan kotoran dan noda pada pakaian. </p>
 				</div>
 			</div>
@@ -75,7 +76,7 @@
 		<div class="kol-13">
 			<div class="box">
 				<div class="box tengah latar-putih melengkung2">
-					<img width="200"  class="box" alt="menulis" src="https://ibb.co.com/njmtD2Q"/>
+					<img width="200"  class="box" alt="menulis" src="https://i.ibb.co.com/pdw53D4/jeruk.jpg"/>
 					<p class="kecil">Asam sitrat yang terkandung dalam jeruk kalamansi efektif untuk menghilangkan noda pada pakaian, seperti noda minyak atau keringat. </p>
 				</div>
 			</div>
