--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
  	<div class="konten tengah">
 		<br/><br/>
 		<span class="bg-hijau box melengkung5 hijautua"><b>SAYA MAU TANYA</b></span>
-		<br/><br/>
-		<h2 class="tebal hitam">Apakah anda mengalami masalah dibawah ini?</h2>
+		<h2 class="tebal hitam">Apakah anda mengalami masalah dibawah ini?</h2><br/><br/>
     </div>
   	<div class="konten">
 		<div class="kol-12 kanan">
