--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 		<div class="kol-12">
 			<div class="box tengah">
-				<img width="100"  alt="pusing" src="https://i.ibb.co.com/CHNnP2w/ibu-khawatir.jpg"/>
+				<img width="100px"  alt="pusing" src="https://i.ibb.co.com/CHNnP2w/ibu-khawatir.jpg"/>
 			</div>
 		</div>
 	</div>
