--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		<div class="konten lebar75">
 			<span class="bg-hijau box melengkung5 hijautua"><b>MEMPERKENALKAN</b></span>
 			<h2 class="tebal putih">SALERAKSI</h2>
-			<img class="box" width="300" alt="produk" src="https://i.ibb.co.com/C2Zmnj9/IMG-20241207-122349.jpg"/>
+			<img class="box" width="300" alt="produk" src="https://i.ibb.co/C2Zmnj9/IMG-20241207-122349.jpg"/>
 			<p >Saleraksi, sabun berbahan dasar lerak dan jeruk kalamansi. Saleraksi adalah solusi cerdas untuk mencuci pakaian.</p>
 		</div>
 	</div>
