--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 		<div class="kol-13">
 			<div class="box">
 				<div class="box tengah  latar-hijautua melengkung2">
-					<img class="foto1"  alt="arif" src="C:\Users\MSI Gaming\Downloads\rafi.jpg"/>
+					<img class="foto1"  alt="arif" src="https://i.ibb.co.com/BzGmqS6/Raffi-Ahmad-2020.jpg"/>
 					<h5  class="kecil"><b>Rafi</b><br/>Cirebon</h5>
 					<p class="kecil box">Sabun ini memiliki aroma yang segar </p>
 				</div>
@@ -236,7 +236,7 @@
 		<div class="kol-13">
 			<div class="box">
 				<div class="box tengah  latar-hijautua melengkung2">
-					<img class="foto1"  alt="arif" src="C:\Users\MSI Gaming\Downloads\jep.jpg"/>
+					<img class="foto1"  alt="arif" src="https://i.ibb.co.com/3mSZJwC/032857100-1450415923-20151217-Nikita-Mirzani-Yudha-3.jpg"/>
 					<h5  class="kecil"><b>Jefri</b><br/>Bandung</h5>
 					<p class="kecil box">Sabun ini tidak membuat tangan saya iritasi </p>
 				</div>
