--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ document.getElementById("countdowna").innerHTML = '<div class="count"><span>'+ d
 <div class="fitur oke" >
 	<div class="konten wow animated fadeInUp"> 
 		<div class="konten box bg-abuabu lebar80 shadow  melengkung">
-			<p class='kecil'><strong>NB :</strong> Hubungi no ini: 087936270011,</p>
+			<p class='kecil'><strong>NB :</strong> Hubungi no ini: 087936270011</p>
 		</div>
 	</div>
 </div>
